6.14.6.2
    pqinsert(1): Added ability to read a single data-product from standard input

6.14.6.1        2023-06-21T17:04:22-0600
    Build:
        * Eliminated all *.hin files (except "registry/registry.hin") and extractDecls(1) in order
          to make the development and build process more conventional and easier to understand
        * Corrected creation of runtime link to accomodate non-standard installs;
            * Makefile.am: Corrected "ensure_ldmhome_links" rule
            * ensure_hdmhome_links: Added extraction of subdirectory name from installation prefix

    ldmadmin(1):
        * In the error messages resulting from checking the queue, placed the pathname of the
          product-queue queue in quotes just in case it contains embedded whitespace
        * Added "pqmon -S" to the "showsettings" command

    Version 6 upstream LDM:
        * Added logging of a warning if sending or notifying about the oldest product in the queue
          because this indicates that the product-queue might be too small or the system too busy

    notifyme(1):
        * Added "-O" option to include product origin in output
        * Modified usage message to use LDM logging module

    keep_running(1):
        * Added a test for the executable's existance

    NOAAPort:
        * Configured the UDP socket for sharing the packets with other sockets and logging a
          warning if it couldn't
        * Added sh(1)-based noaaportBlender(1) to keep blender(1) and noaaportIngester(1) processes
          running
        * blender(1):
            * Frame is now output when the wait-time expires even if no subsequent frames arrive
            * "Starting product" INFO-level log message now includes source field from frame header

    Documentation:
        * Improved slightly

    DevOps:
        * Added "workflow_dispatch" to "on" entry

6.14.5  2023-02-16T11:40:06-0700
    ldmadmin(1):