@@ -1,3 +1,2 @@
-pqinsert.1
 /pq_test_insert
 /pq_test_insert.pq
